{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 80,
  "lineage": "bfa1bc11-0c3c-eecd-4cbc-cb76ca8ee50e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:891377048108:instance/i-00f5bf7e91a961cdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f5bf7e91a961cdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6e24f823770be09",
            "private_dns": "ip-10-255-2-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.255.2.11",
            "public_ip": "54.205.45.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03db6c6dde0a676ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733e3a2ddbe46042",
            "tags": {
              "Name": "tuananh-bastion-1"
            },
            "tags_all": {
              "Name": "tuananh-bastion-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b636a842c934c1b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.my-sg-for-ssh",
            "aws_subnet.my-public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:internet-gateway/igw-0178598ca28f9968e",
            "id": "igw-0178598ca28f9968e",
            "owner_id": "891377048108",
            "tags": {
              "Name": "ta-igw"
            },
            "tags_all": {
              "Name": "ta-igw"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:route-table/rtb-0d9880f8a1ce82707",
            "id": "rtb-0d9880f8a1ce82707",
            "owner_id": "891377048108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ta-private-route-table"
            },
            "tags_all": {
              "Name": "ta-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:route-table/rtb-099e302e7fef89da8",
            "id": "rtb-099e302e7fef89da8",
            "owner_id": "891377048108",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0178598ca28f9968e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ta-public-route-table"
            },
            "tags_all": {
              "Name": "ta-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc0e9a1241f327e",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-0508515a69c6bc8ce"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-private-subnet",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0076c3d113f3d61e4",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-052a2d7603d82c5a6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-private-subnet",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4e53c8b5810add4",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-0cdeffc288f2b2250"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-private-subnet",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011c5002e61f72205",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-0d764b47c58bb248d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-private-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd33b7ebe7b2ebea",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-00aac68b017d51d3c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-public-subnet",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e042295c1cfac76",
            "route_table_id": "rtb-099e302e7fef89da8",
            "subnet_id": "subnet-0733e3a2ddbe46042"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.my-public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-for-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:security-group/sg-0b636a842c934c1b5",
            "description": "Allow SSH on port 8080 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b636a842c934c1b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-ssh-8080",
            "name_prefix": "",
            "owner_id": "891377048108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-8080"
            },
            "tags_all": {
              "Name": "allow-ssh-8080"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-0508515a69c6bc8ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.255.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0508515a69c6bc8ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-private-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-private-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-052a2d7603d82c5a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a2d7603d82c5a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-private-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-private-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-0cdeffc288f2b2250",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdeffc288f2b2250",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-private-subnet-3",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-private-subnet-3",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-0d764b47c58bb248d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.255.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d764b47c58bb248d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-private-subnet-4",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-private-subnet-4",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-00aac68b017d51d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.255.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aac68b017d51d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:subnet/subnet-0733e3a2ddbe46042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0733e3a2ddbe46042",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377048108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ta-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "ta-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0a33fc7a904310701"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377048108:vpc/vpc-0a33fc7a904310701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.255.0.0/16",
            "default_network_acl_id": "acl-011d71955b56e7499",
            "default_route_table_id": "rtb-0bdbb27e7b4e4c247",
            "default_security_group_id": "sg-08b8e5290716ec897",
            "dhcp_options_id": "dopt-013118851e4a4e5ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a33fc7a904310701",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdbb27e7b4e4c247",
            "owner_id": "891377048108",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}